force-app/main/default/objects/Quote/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>TEXT(QuoteAccount.Status__c)</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>