force-app/main/default/objects/Quote/fields/Average_Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Average_Customer_Discount__c</fullName>
    <description>Average customer discount (in percent) for this quote.</description>
    <formula>IF(List_Amount__c = 0,0,(List_Amount__c - Customer_Amount__c /List_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average customer discount (in percent) for this quote.</inlineHelpText>
    <label>Avg. Customer Disc. (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>