force-app/main/default/objects/Quote/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <description>State/Province of the Bill To address for this quote.</description>
    <inlineHelpText>State/Province of the Bill To address for this quote.</inlineHelpText>
    <label>Bill To State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>