force-app/main/default/objects/Quote/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <description>Street portion of the billing address for this quote.</description>
    <inlineHelpText>Street portion of the billing address for this quote.</inlineHelpText>
    <label>Bill To Street</label>
    <type>TextArea</type>
</CustomField>