force-app/main/default/objects/Quote/fields/Calculate_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Checkbox</label>
    <type>Checkbox</type>
</CustomField>