force-app/main/default/objects/Quote/fields/Commercial_Action__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Action__c</fullName>
    <description>Used for calculating NRR, GRR, Expansion ARR, Contraction ARR across Revenue Lifecycle without complicated logic.</description>
    <label>Commercial Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Commercial_Action</valueSetName>
    </valueSet>
</CustomField>