force-app/main/default/objects/Quote/fields/Customer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Amount__c</fullName>
    <label>Customer Amount</label>
    <summarizedField>QuoteLineItem.TotalLineAmount</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>