force-app/main/default/objects/Quote/fields/Default_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Frequency__c</fullName>
    <label>Default Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Frequency</valueSetName>
    </valueSet>
</CustomField>