force-app/main/default/objects/Quote/fields/Default_Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Schedule__c</fullName>
    <label>Default Billing Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Schedule</valueSetName>
    </valueSet>
</CustomField>