force-app/main/default/objects/Quote/fields/Default_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Charge_Type__c</fullName>
    <label>Default Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Commercial_Action</valueSetName>
    </valueSet>
</CustomField>