force-app/main/default/objects/Quote/fields/Default_Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Default_Subscription_Term__c</fullName>
    <label>Default Subscription Term</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>