force-app/main/default/objects/Quote/fields/DoesAutomaticallyRenew__c.field-meta.xml
<CustomField>
    <fullName>DoesAutomaticallyRenew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Renew</label>
    <type>Checkbox</type>
</CustomField>