force-app/main/default/objects/Quote/fields/Hardware_Details__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Details__c</fullName>
    <description>New field created to track any Hardware Details (Ticket #, Approved Date, and Approver) for all Quotes/Orders that contain Hardware Lab products.</description>
    <inlineHelpText>What is the related ticket #, Approved Date, and Approver?</inlineHelpText>
    <label>Hardware Details</label>
    <type>TextArea</type>
</CustomField>