force-app/main/default/objects/Quote/fields/Hardware_Order__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hardware Order</label>
    <type>Checkbox</type>
</CustomField>