force-app/main/default/objects/Quote/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies which Quote is Primary since RLM doesn&apos;t do this automatically.</description>
    <inlineHelpText>Is this the Primary Quote?</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>