force-app/main/default/objects/Quote/fields/Legacy__c.field-meta.xml
<CustomField>
    <fullName>Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set during data migration from the old Salesforce Org</description>
    <label>Legacy Record?</label>
    <type>Checkbox</type>
</CustomField>