force-app/main/default/objects/Quote/fields/Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ID__c</fullName>
    <description>03/07/26 ERA - Created for SF migration.
Created for Contango and ConnectWise Data Imports</description>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>