force-app/main/default/objects/Quote/fields/List_Amount__c.field-meta.xml
<CustomField>
    <fullName>List_Amount__c</fullName>
    <description>Total List Amount of each non-optional line item in this quote.</description>
    <inlineHelpText>Total List Amount of each non-optional line item in this quote.</inlineHelpText>
    <label>List Amount</label>
    <summarizedField>QuoteLineItem.NetUnitPrice</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>