force-app/main/default/objects/Quote/fields/Master_Contract__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master contract with which asset products in this quote are to be co-terminated.</description>
    <inlineHelpText>Master contract with which asset products in this quote are to be co-terminated.</inlineHelpText>
    <label>Master Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>