force-app/main/default/objects/Quote/fields/Ordered__c.field-meta.xml
<CustomField>
    <fullName>Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies a related Order has been created for this Quote.</description>
    <inlineHelpText>Has this Quote been Ordered?</inlineHelpText>
    <label>Ordered?</label>
    <type>Checkbox</type>
</CustomField>