force-app/main/default/objects/Quote/fields/Quote_18_digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_18_digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote 18 digit ID</label>
    <type>Text</type>
</CustomField>