force-app/main/default/objects/Quote/fields/Recurring_Total__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Total__c</fullName>
    <label>Recurring Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>