force-app/main/default/objects/Quote/fields/Revenue_Calculation_Status__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Calculation_Status__c</fullName>
    <description>Provides the status for calculation fields tied to the Revenue Lifecycle.</description>
    <label>Revenue Calculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Revenue_Calculation_Status</valueSetName>
    </valueSet>
</CustomField>