force-app/main/default/objects/Quote/fields/SBQQ_DaysQuoteOpen__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_DaysQuoteOpen__c</fullName>
    <description>Number of days the quote has been opened.</description>
    <formula>IF(OR(ISPICKVAL(Status,&quot;Draft&quot;), ISPICKVAL(Status,&quot;In Review&quot;),ISPICKVAL(Status,&quot;Approved&quot;), ISPICKVAL(Status,&quot;Presented&quot;)),Round(NOW() - CreatedDate,0) ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days the quote has been opened.</inlineHelpText>
    <label>Days Quote Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>