force-app/main/default/objects/Quote/fields/ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ShippingCountry__c</fullName>
    <description>Country on the Ship To address for this quote.</description>
    <inlineHelpText>Country on the Ship To address for this quote.</inlineHelpText>
    <label>Ship To Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>