force-app/main/default/objects/Quote/fields/ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShippingPostalCode__c</fullName>
    <description>Postal Code on the Ship To address for this quote.</description>
    <inlineHelpText>Postal Code on the Ship To address for this quote.</inlineHelpText>
    <label>Ship To Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>