force-app/main/default/objects/Quote/fields/Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms__c</fullName>
    <description>Free-text special terms or pre-approved language to appear on the Quote PDF</description>
    <label>Special Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>