force-app/main/default/objects/Quote/fields/Total_Customer_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Discount_Amount__c</fullName>
    <label>Total Customer Disc. Amount</label>
    <summarizedField>QuoteLineItem.DiscountAmount</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>