force-app/main/default/objects/Quote/fields/Total_Delta_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_Delta_ARR__c</fullName>
    <label>Total Delta ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>