force-app/main/default/objects/Quote/fields/Total_MRR__c.field-meta.xml
<CustomField>
    <fullName>Total_MRR__c</fullName>
    <label>Total MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>