force-app/main/default/objects/Quote/fields/Total_Up_For_Renewal_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_Up_For_Renewal_ARR__c</fullName>
    <label>Total Up For Renewal ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>