force-app/main/default/objects/Quote/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>QUOTE.QUOTEACCOUNT</columns>
    <columns>QUOTE.NAME</columns>
    <columns>Created_Date__c</columns>
    <columns>BillingState__c</columns>
    <columns>ShippingState__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>Hardware_Order__c</columns>
    <columns>Ordered__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_Date__c</field>
        <operation>greaterThan</operation>
        <value>4/10/2026</value>
    </filters>
    <filters>
        <field>QUOTE.NAME</field>
        <operation>notContain</operation>
        <value>Test</value>
    </filters>
    <label>All Quotes</label>
</ListView>